[R5.1.0]
SyncProxyTester:
+ The user can specify VR synonyms for choice set's commands with the help of additional text fields.
+ Add extra logs for requests.
+ Persist the log messages in the UI during one app launch.
* Fix: AddCommand dialog: correctly send the entered VR Synonym with the command.
+ Introduce changelog.
+ The app version, build info, and the changelog can be shown from options menu => "App version".
+ All the bugs and features that have been around since the beginning.
+ CreateChoiceSet dialog: the user can create a choice set with 1..3 choices with the help of checkboxes.
+ Show current protocol version in the options menu: "Toggle Protocol Ver. (cur 2)".